--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The sprout of a new seed</title>
-    <link rel="stylesheet" type="text/css" href="/WTB/reset.css">
-    <link rel="stylesheet" type="text/css" href="/WTB/style.css"/>
+    <title>Sprout of a new seed</title>
+    <link rel="stylesheet" type="text/css" href="/reset.css">
+    <link rel="stylesheet" type="text/css" href="/tsystem.css">
+    <link rel="stylesheet" type="text/css" href="/pglayout.css">
     <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre&display=swap" rel="stylesheet">
-
+    <script src="script.js"></script>
 
 </head>
 <body>
@@ -18,7 +19,6 @@
 
 
 <nav>
-   
     <div cass="logo">
             <h2>WTB</h2>
     </div>  
