Work in progress

--- a/index.html
+++ b/index.html
@@ -33,15 +33,17 @@
 
 <!--  MAIN  -->
     <!-- Home -->
+    
 <section id="home">
 <h1>Embrace the will to bloom!</h1>
+</section>
 
 
     <!-- Home -->
 
 
     <!-- About -->
-<section id="about"></section>
+<section id="about">
 <h2>What is the Willtobloom about? </h2>
 <p>WillToBloom is a creative force dedicated to igniting passion, building community, and helping people turn the drive to grow into tangible expression through art and music</p>
  
@@ -49,7 +51,8 @@
 <p>At its core, WillToBloom is about fanning the flames to grow within us all. More than a brand, we’re here to ignite passion and encourage people to tap into their greatest potential. We elevate through community and we strive to turn the desire for creativity into the drive for action.
 We branch into clothing, music production, and art. Our main focus is inspiring people to have the courage to keep growing—both as individuals and as a community—so they can achieve their goals and dreams, creating a better future together. Even in less-than-ideal circumstances, we can still choose to carry the will to bloom wherever we go. Growth isn’t passive—it’s a choice.
 <br/>Embrace the will to bloom!</p></section>
-    <!-- About -->
+</section>
+<!-- About -->
 
 
 
